force-app/main/default/objects/Opco__c/Opco__c.object-meta.xml
<CustomObject>
    <label>Opco</label>
    <nameField>
        <label>Opco Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opco</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>