force-app/main/default/objects/Opco__c/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <label>Company Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>