force-app/main/default/objects/Opco__c/fields/Date_Fiscal_Year_Begin__c.field-meta.xml
<CustomField>
    <fullName>Date_Fiscal_Year_Begin__c</fullName>
    <label>Date Fiscal Year Begin</label>
    <type>Date</type>
</CustomField>