force-app/main/default/objects/Opco__c/fields/Domestic_Currency__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Currency__c</fullName>
    <label>Domestic Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>