force-app/main/default/objects/Opco__c/fields/In_scope__c.field-meta.xml
<CustomField>
    <fullName>In_scope__c</fullName>
    <label>In scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>