force-app/main/default/objects/Opco__c/fields/SFUser__c.field-meta.xml
<CustomField>
    <fullName>SFUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFUser</label>
    <type>Checkbox</type>
</CustomField>